<resources>
    <string name="app_name">Debug Menu</string>
    <string name="wai">Подождите</string>
    <string name="debug_menu">Debug Menu</string>
    <string name="start_recording">Start \nRecording</string>
    <string name="stop_recording">Stop \nRecording</string>
    <string name="server_url">Server url:</string>
    <string name="take_picture">Take picture</string>
    <string name="crash_logs">Crash Logs</string>
    <string name="view_crashes">View Crashes</string>
    <string name="applyurl">Apply Url</string>
</resources>