<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tv_server_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_url"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/serverUrlRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_server_url" />


            <TextView
                android:id="@+id/tv_recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Recordings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/serverUrlRadioGroup" />


            <Button
                android:id="@+id/btn_start_recording"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/color_red"
                android:text="@string/start_recording"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recording" />

            <Button
                android:id="@+id/btn_stop_recording"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/color_red"
                android:text="@string/stop_recording"
                android:visibility="visible"
                app:layout_constraintStart_toEndOf="@+id/btn_start_recording"
                app:layout_constraintTop_toTopOf="@+id/btn_start_recording" />

            <Button
                android:id="@+id/take_picture"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_red"
                android:text="@string/take_picture"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@+id/btn_stop_recording"
                app:layout_constraintStart_toStartOf="@+id/btn_start_recording"
                app:layout_constraintTop_toBottomOf="@+id/btn_start_recording" />

            <TextView
                android:id="@+id/tv_crash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/crash_logs"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/take_picture" />

            <Button
                android:id="@+id/btn_open_crashes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_red"
                android:text="@string/view_crashes"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_crash" />

            <Button
                android:id="@+id/applyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="9dp"
                android:backgroundTint="@color/color_red"
                android:text="@string/applyurl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_open_crashes" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:clipChildren="false"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@id/applyButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <ru.kpfu.itis.debugmenu.base.StandardLoadingView
        android:id="@+id/loadingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:slv_loadingText="Меняю окружение" />

</androidx.constraintlayout.widget.ConstraintLayout>
